--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
 
     <style>
         /* ---------- Base ---------- */
-        body {
-            font-family: Arial, sans-serif;
+                body {
+            font-family: Georgia, serif;
             margin: 0;
             background: #0d0d0d;
             color: #fff;
             overflow-x: hidden;
         }
-
-        a {
-            color: inherit;
-            text-decoration: none;
-            font-weight: bold;
-        }
+        button { cursor: pointer; }
+        a { color: inherit; text-decoration: none; font-weight: bold; }
 
         /* ---------- Floating Background ---------- */
         #floating-bg {
