--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
 <!-- ACU Mechanics Summary Glass Card (before Mini TV) -->
 <div class="glass-card">
     <div>
-        <strong>Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong><br>
-        <em>Further ACU mechanics and visibility unlock as your access activates.</em>
+        <strong> | Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong><br>
+        <em> • Further ACU mechanics and visibility unlock as your access activates.</em>
     </div>
 </div>
 
