--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
             <div>
                 <strong>ACU stands for AvalonCare Units — Interests which are released and tracked on timed system cycles generated through the Logical Wing.</strong><br>
 
+        <div style="height:14px;"></div>
+
                 <em>Rather than instant or speculative activity, ACU Interests are designed to maintain balance, clarity, and sustainability.</em>
             </div>
         </div>
@@ -206,6 +208,15 @@
             Supports progress, alignment, and financial growth.
         </span>
     </div>
+
+    <div style="margin-top:12px; font-size:14px;">
+        <strong>Reference rate:</strong> 1 USD = 1 ACU<br>
+        <strong>Cycle style:</strong> Complete 24-hour ACU cycles<br>
+        <strong>Cycle rate (per 12 hours):</strong> 14.15<br>
+        ~ Built for full continuity, stability, and system depth.
+
+        <div style="height:14px;"></div>
+
     <div class="plan-pay">
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
@@ -213,12 +224,6 @@
         <a href="https://app.paymento.io/payment-link/5e887f901356404788e989c5e2c4cb47" target="_blank">
             Activate access with Tether USDT
         </a>
-    </div>
-    <div style="margin-top:12px; font-size:14px;">
-        <strong>Reference rate:</strong> 1 USD = 1 ACU<br>
-        <strong>Cycle style:</strong> Complete 24-hour ACU cycles<br>
-        <strong>Cycle rate (per 12 hours):</strong> 14.15<br>
-        ~ Built for full continuity, stability, and system depth.
     </div>
 </div>
 
@@ -230,6 +235,15 @@
             Enables sustainable systems with minimal friction.
         </span>
     </div>
+ 
+    <div style="margin-top:12px; font-size:14px;">
+        <strong>Reference rate:</strong> 1 USD = 5 ACU<br>
+        <strong>Cycle style:</strong> Structured ACU cycles<br>
+        <strong>Cycle rate (per 12 hours):</strong> 45.15<br>
+        ~ Offers more consistency and deeper engagement than Lite
+
+        <div style="height:14px;"></div>
+
     <div class="plan-pay">
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
@@ -237,12 +251,6 @@
         <a href="https://app.paymento.io/payment-link/aaf970b845624de0b5eea78726134e79" target="_blank">
             Activate access with Tether USDT
         </a>
-    </div>
-    <div style="margin-top:12px; font-size:14px;">
-        <strong>Reference rate:</strong> 1 USD = 5 ACU<br>
-        <strong>Cycle style:</strong> Structured ACU cycles<br>
-        <strong>Cycle rate (per 12 hours):</strong> 45.15<br>
-        ~ Offers more consistency and deeper engagement than Lite
     </div>
 </div>
 
@@ -254,6 +262,15 @@
             Focuses on stability, clarity, and easing daily pressure.
         </span>
     </div>
+
+    <div style="margin-top:12px; font-size:14px;">
+        <strong>Reference rate:</strong> 1 USD = 10 ACU<br>
+        <strong>Cycle style:</strong> Limited exposure cycles<br>
+        <strong>Cycle rate (per 12 hours):</strong> 47.15<br>
+        ~ Designed for light entry and observation-level participation
+
+        <div style="height:14px;"></div>
+
     <div class="plan-pay">
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
@@ -262,18 +279,15 @@
             Activate access with Tether USDT
         </a>
     </div>
-    <div style="margin-top:12px; font-size:14px;">
-        <strong>Reference rate:</strong> 1 USD = 10 ACU<br>
-        <strong>Cycle style:</strong> Limited exposure cycles<br>
-        <strong>Cycle rate (per 12 hours):</strong> 47.15<br>
-        ~ Designed for light entry and observation-level participation
-    </div>
 </div>
 
 <!-- ACU Mechanics Summary Glass Card (before Mini TV) -->
 <div class="glass-card">
     <div>
         <strong> | Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong><br>
+
+        <div style="height:14px;"></div>
+
         <em> • Further ACU mechanics and visibility unlock as your access activates.</em>
     </div>
 </div>
