--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@
         <strong>Cycle style:</strong> Complete 24-hour ACU cycles<br>
         <strong>Cycle rate (per 12 hours):</strong> 14.15<br>
         ~ Built for full continuity, stability, and system depth.
+    </div>
 
-        <div style="height:14px;"></div>
+    <div style="height:14px;"></div>
 
     <div class="plan-pay">
         <img class="plan-logo"
@@ -235,14 +236,15 @@
             Enables sustainable systems with minimal friction.
         </span>
     </div>
- 
+
     <div style="margin-top:12px; font-size:14px;">
         <strong>Reference rate:</strong> 1 USD = 5 ACU<br>
         <strong>Cycle style:</strong> Structured ACU cycles<br>
         <strong>Cycle rate (per 12 hours):</strong> 45.15<br>
-        ~ Offers more consistency and deeper engagement than Lite
+        ~ Offers more consistency and deeper engagement than Lite.
+    </div>
 
-        <div style="height:14px;"></div>
+    <div style="height:14px;"></div>
 
     <div class="plan-pay">
         <img class="plan-logo"
@@ -267,9 +269,10 @@
         <strong>Reference rate:</strong> 1 USD = 10 ACU<br>
         <strong>Cycle style:</strong> Limited exposure cycles<br>
         <strong>Cycle rate (per 12 hours):</strong> 47.15<br>
-        ~ Designed for light entry and observation-level participation
+        ~ Designed for light entry and observation-level participation.
+    </div>
 
-        <div style="height:14px;"></div>
+    <div style="height:14px;"></div>
 
     <div class="plan-pay">
         <img class="plan-logo"
@@ -284,11 +287,9 @@
 <!-- ACU Mechanics Summary Glass Card (before Mini TV) -->
 <div class="glass-card">
     <div>
-        <strong> | Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong><br>
-
+        <strong>| Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong>
         <div style="height:14px;"></div>
-
-        <em> • Further ACU mechanics and visibility unlock as your access activates.</em>
+        <em>• Further ACU mechanics and visibility unlock as your access activates.</em>
     </div>
 </div>
 
