--- a/index.html
+++ b/index.html
@@ -195,16 +195,14 @@
         </p>
 
         <!-- ACU Intro Glass Card -->
-        <div class="glass-card">
-            <div>
-                <strong>As you continue inside AvalonCare, you’ll see the term ACU referenced throughout the ecosystem.</strong>
+        <p>
+    <strong>As you continue inside AvalonCare, you’ll notice the term ACU referenced throughout the ecosystem.</strong>
             </div>
         </div>
 
         <!-- ACU Explanation Glass Card -->
-        <div class="glass-card">
-            <div>
-                <strong>ACU stands for AvalonCare Units — Interests which are released and tracked on timed system cycles generated through the Logical Wing.</strong><br>
+        <p>
+    <strong>ACU stands for AvalonCare Units — Interests which are released and tracked on timed system cycles generated through the Logical Wing.</strong><br>
 
         <div style="height:14px;"></div>
 
@@ -297,9 +295,8 @@
 </div>
 
 <!-- ACU Mechanics Summary Glass Card (before Mini TV) -->
-<div class="glass-card">
-    <div>
-        <strong>| Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong>
+<p>
+    <strong>| Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong>
         <div style="height:14px;"></div>
         <em>• Further ACU mechanics and visibility unlock as your access activates.</em>
     </div>
