--- a/index.html
+++ b/index.html
@@ -189,26 +189,21 @@
     <div id="content">
 
         <!-- Page Header -->
-        <h3>Plans</h3>
-        <p style="margin-bottom:0px; font-size:14px; opacity:0.85;">
-            About the AvalonFlow Plans
-        </p>
+<h3>Plans</h3>
+<p style="margin-bottom:0px; font-size:14px; opacity:0.85;">
+    About the AvalonFlow Plans
+</p>
 
-        <!-- ACU Intro Glass Card -->
-        <p>
+<!-- ACU Intro (No Glass Card) -->
+<p>
     <strong>As you continue inside AvalonCare, you’ll notice the term ACU referenced throughout the ecosystem.</strong>
-            </div>
-        </div>
+</p>
 
-        <!-- ACU Explanation Glass Card -->
-        <p>
+<!-- ACU Explanation (No Glass Card) -->
+<p>
     <strong>ACU stands for AvalonCare Units — Interests which are released and tracked on timed system cycles generated through the Logical Wing.</strong><br>
-
-        <div style="height:14px;"></div>
-
-                <em>Rather than instant or speculative activity, ACU Interests are designed to maintain balance, clarity, and sustainability.</em>
-            </div>
-        </div>
+    <em>Rather than instant or speculative activity, ACU Interests are designed to maintain balance, clarity, and sustainability.</em>
+</p>
 
 <!-- AvalonCare Premium Glass Card -->
 <div class="glass-card">
@@ -232,7 +227,7 @@
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
              alt="AvalonCare Premium Logo">
-        <a href="https://app.paymento.io/payment-link/5e887f901356404788e989c5e2c4cb47" target="_blank">
+        <a href="https://app.paymento.io/payment-link/5e887f901356404788e989c5e2c4cb47" target="_blank" style="color:#6b2cd8;">
             Activate access with Tether USDT
         </a>
     </div>
@@ -260,7 +255,7 @@
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
              alt="AvalonCare Basic Logo">
-        <a href="https://app.paymento.io/payment-link/aaf970b845624de0b5eea78726134e79" target="_blank">
+        <a href="https://app.paymento.io/payment-link/aaf970b845624de0b5eea78726134e79" target="_blank" style="color:#6b2cd8;">
             Activate access with Tether USDT
         </a>
     </div>
@@ -288,19 +283,17 @@
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
              alt="AvalonCare Lite Logo">
-        <a href="https://app.paymento.io/payment-link/a860137ccb2743df9135b45f5c5c3334" target="_blank">
+        <a href="https://app.paymento.io/payment-link/a860137ccb2743df9135b45f5c5c3334" target="_blank" style="color:#6b2cd8;">
             Activate access with Tether USDT
         </a>
     </div>
 </div>
 
-<!-- ACU Mechanics Summary Glass Card (before Mini TV) -->
+<!-- ACU Mechanics Summary (No Glass Card) -->
 <p>
-    <strong>| Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong>
-        <div style="height:14px;"></div>
-        <em>• Further ACU mechanics and visibility unlock as your access activates.</em>
-    </div>
-</div>
+    <strong>| Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong><br>
+    <em>• Further ACU mechanics and visibility unlock as your access activates.</em>
+</p>
 
         <!-- Mini TV: Member Reflection -->
         <p style="text-align:center; font-weight:bold; margin-top:20px;">View a Member Reflection</p>
