--- a/index.html
+++ b/index.html
@@ -194,14 +194,15 @@
     About the AvalonFlow Plans
 </p>
 
-<!-- ACU Intro (No Glass Card) -->
+<!-- ACU Intro -->
 <p>
     <strong>As you continue inside AvalonCare, you’ll notice the term ACU referenced throughout the ecosystem.</strong>
 </p>
 
-<!-- ACU Explanation (No Glass Card) -->
+<!-- ACU Explanation -->
 <p>
-    <strong>ACU stands for AvalonCare Units — Interests which are released and tracked on timed system cycles generated through the Logical Wing.</strong><br>
+    <strong>ACU stands for AvalonCare Units — Interests which are released and tracked on timed system cycles generated through the Logical Wing.</strong>
+    <div style="height:14px;"></div>
     <em>Rather than instant or speculative activity, ACU Interests are designed to maintain balance, clarity, and sustainability.</em>
 </p>
 
@@ -227,7 +228,7 @@
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
              alt="AvalonCare Premium Logo">
-        <a href="https://app.paymento.io/payment-link/5e887f901356404788e989c5e2c4cb47" target="_blank" style="color:#6b2cd8;">
+        <a href="https://app.paymento.io/payment-link/5e887f901356404788e989c5e2c4cb47" target="_blank">
             Activate access with Tether USDT
         </a>
     </div>
@@ -255,7 +256,7 @@
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
              alt="AvalonCare Basic Logo">
-        <a href="https://app.paymento.io/payment-link/aaf970b845624de0b5eea78726134e79" target="_blank" style="color:#6b2cd8;">
+        <a href="https://app.paymento.io/payment-link/aaf970b845624de0b5eea78726134e79" target="_blank">
             Activate access with Tether USDT
         </a>
     </div>
@@ -283,15 +284,16 @@
         <img class="plan-logo"
              src="https://i.postimg.cc/W3nB6L7j/6bf751e011e8ae86963744c079ec2a9b.jpg"
              alt="AvalonCare Lite Logo">
-        <a href="https://app.paymento.io/payment-link/a860137ccb2743df9135b45f5c5c3334" target="_blank" style="color:#6b2cd8;">
+        <a href="https://app.paymento.io/payment-link/a860137ccb2743df9135b45f5c5c3334" target="_blank">
             Activate access with Tether USDT
         </a>
     </div>
 </div>
 
-<!-- ACU Mechanics Summary (No Glass Card) -->
+<!-- ACU Mechanics Summary -->
 <p>
-    <strong>| Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong><br>
+    <strong>| Higher tiers prioritize structure, control, and continuity, while lower tiers offer broader unit exposure with reduced cycle depth within a 30-Day Duration.</strong>
+    <div style="height:14px;"></div>
     <em>• Further ACU mechanics and visibility unlock as your access activates.</em>
 </p>
 
