--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
 
 <!-- ACU Intro -->
 <p>
-    <strong>As you continue inside AvalonCare, you’ll notice the term ACU referenced throughout the ecosystem.</strong>
+    <strong>Inside AvalonCare, “ACU” pops up everywhere.</strong>
 </p>
 
 <!-- ACU Explanation -->
 <p>
-    <strong>ACU stands for AvalonCare Units — Interests which are released and tracked on timed system cycles generated through the Logical Wing.</strong>
+    <strong>ACU stands for AvalonCare Units — Interests released and tracked on timed cycles through the Logical Wing.</strong>
     <div style="height:14px;"></div>
-    <em>Rather than instant or speculative activity, ACU Interests are designed to maintain balance, clarity, and sustainability.</em>
+    <em>Rather than instant or speculative activity, ACU Interests are designed to maintain balance and sustainability.</em>
 </p>
 
 <!-- AvalonCare Premium Glass Card -->
