--- a/index.html
+++ b/index.html
@@ -189,10 +189,8 @@
     <div id="content">
 
         <!-- Page Header -->
-<h3>Plans</h3>
-<p style="margin-bottom:0px; font-size:14px; opacity:0.85;">
-    About the AvalonFlow Plans
-</p>
+<h3 style="margin:0;">Plans</h3>
+<p style="margin:0; font-size:14px; opacity:0.85;">About the AvalonFlow Plans</p>
 
 <!-- ACU Intro -->
 <p>
