--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AvalonFlow Plans</title>
 
         <!-- Favicon -->
-    <link rel="icon" href="/file_0000000050fc71fda6c0a9650ebdd671.png" type="image/png" sizes="48x48">
+<link rel="icon" href="/favicon.png" type="image/png" sizes="48x48">
 
     <style>
         /* ---------- Base ---------- */
