--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 <!-- ACU Explanation -->
 <p>
-    <strong>ACU stands for AvalonCare Units — Interests released and tracked on timed cycles through the Logical Wing.</strong>
+    <strong>ACU stands for AvalonCare Units — Returns earned according to your purchased plan and tracked on timed cycles through the Logical Wing.</strong>
     <div style="height:14px;"></div>
     <em>Rather than instant or speculative activity, ACU Interests are designed to maintain balance and sustainability.</em>
 </p>
