--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
         <!-- Favicon -->
 <link rel="icon" href="/favicon.png" type="image/png" sizes="48x48">
 
+    <!-- Structured Data for Logo -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "AvalonFlow",
+      "url": "https://avalonflow.site",
+      "logo": "https://avalonFlow.site/favicon.png"
+    }
+
     <style>
         /* ---------- Base ---------- */
                 body {
