--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Favicon -->
 <link rel="icon" href="/favicon.png" type="image/png" sizes="48x48">
 
-    <!-- Structured Data for Logo -->
+        <!-- Structured Data for Logo -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -18,6 +18,7 @@
       "url": "https://avalonflow.site",
       "logo": "https://avalonFlow.site/favicon.png"
     }
+</script>
 
     <style>
         /* ---------- Base ---------- */
